# cercall

./: .gitignore  CMakeLists.txt  README.md
cmake/: coverage.cmake
examples/: CMakeLists.txt  manageableserviceinterface.h
examples/cerclock/: CMakeLists.txt  boost_chrono.hpp  boost_setup.h  cereal_setup.h  clockclient.cpp  clockclient.h  clockinterface.h  clockservice.cpp  clockservice.h
examples/cerclock/python/: clockclient.py  pyclockclient.cpp  pyclockclient.h
include/cercall/: acceptor.h  cercall.h  client.h  error.h  log.h  service.h  transport.h
include/cercall/asio/: basicstreamacceptor.h  basicstreamtransport.h  clienttcptransport.h  config.h  errorcode.h  tcpacceptor.h  tcptransport.h
include/cercall/boost/: binary.h  serialization.h  text.h  types.h
include/cercall/cereal/: binary.h  json.h  serialization.h  types.h  xml.h
include/cercall/details/: callqueue.h  cpputil.h  eventhelper.h  functiondict.h  messenger.h  typeprops.h  typeutil.h
unittests/: CMakeLists.txt  calculatorclient.h  calculatorinterface.h  calculatorservice.h  calltest.cpp  calltestserver.cpp  errorstest.cpp  eventstest.cpp  eventstestserver.cpp  polyeventsourceinterface.h  process.cpp  process.h  simpleeventsourceinterface.h  testmain.cpp  testutil.h
utils/: debug.h  program.cpp  program.h
